# project-example-for-python

./: .buildinfo  .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  action.yml  autogenerated.html  genindex.html  index.html  objects.inv  py-modindex.html  rst.html  search.html  searchindex.js  setup.cfg  setup.py
.ci/: pages.sh
.doctrees/: autogenerated.doctree  environment.pickle  index.doctree  rst.doctree
.doctrees/contributing/: codebase.doctree  docs.doctree  environment.doctree  index.doctree  testing.doctree
.github/workflows/: pages.yml  release.yml  testing.yml
_sources/: autogenerated.rst.txt
_sources/contributing/: codebase.rst.txt  environment.rst.txt
_static/: documentation_options.js
contributing/: codebase.html  docs.html  environment.html  index.html  testing.html
docs/: autogenerated.rst  conf.py  index.rst  rst.rst
project_example_for_python/: aclass.py  cli.py  cli_again.py  importable.py
project_example_for_python/inner/: filez.py
