[metadata]
name = project-example-for-python
description = DFFML blank project-example-for-python
long_description = file: README.rst
author = John Andersen
author_email = john.s.andersen@intel.com
maintainer = John Andersen
maintainer_email = john.s.andersen@intel.com
url = https://github.com/johnsa1/project-example-for-python
license = MIT
# keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
# entry_points = file: entry_points.txt
setup_requires =
    setuptools_scm[toml]>=3.4.3
# install_requires =
#     dffml>=0.4.0

[options.extras_require]
dev =
    coverage
    codecov
    sphinx
    sphinx_rtd_theme
    twine
    setuptools_scm[toml]>=3.4.3
    black==19.10b0
    importlib_metadata>=4.8.1;python_version<"3.8"
